# ai-family-repair-diagnosis

./: .gitignore  AGENTS.md  CHANGELOG.md  DEMO_SCRIPT.md  DEPLOYMENT.md  LICENSE  MVP_ACCEPTANCE.md  PRD.md  README.md  REPAIR_PLAN_v2.md  TECH_DESIGN.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/ai_home_repair_diagnosis_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/app/: __init__.py  domain.py  main.py
backend/app/ai/: __init__.py  llm_adapter.py  output_parser.py  prompt_templates.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/knowledge/: ac_not_cooling.yaml  circuit_trip.yaml  drain_blocked.yaml  floor_drain_smell.yaml  (+6 more)
backend/eval/: baseline_v0.1.1.md  baseline_v0.1.1_llm_full.md  baseline_v0.1.1_prod.md  baseline_v0.1.md  golden_set.jsonl  golden_set_v0.1.1_200.jsonl  golden_set_v0.1.1_200_readable.md  golden_set_v0.1.1_notes.md  high_risk_errors_v0.1.1.jsonl  high_risk_errors_v0.1.1_llm_full.jsonl  misclassified_v0.1.1.jsonl  misclassified_v0.1.1_llm_full.jsonl  misclassified_v0.1.1_prod.jsonl
backend/migrations/: README  env.py
backend/scripts/: deploy_smoke.py  fix_golden_labels_v011.py  generate_golden_readable.py  generate_golden_set_v011.py  init_db.py  llm_smoke.py  run_eval.py  run_eval_e2e.py
backend/tests/: test_classification_service.py  test_config.py  test_content_safety_service.py  test_conversation_service.py  test_core_services.py  test_deploy_config.py  test_eval_script.py  test_houses_api.py  test_knowledge_base.py  test_llm_adapter.py  test_persistence_flow.py
(+78 files in other folders)
